--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "dependencies": {
+    "adm-zip": "^0.5.10",
+    "archiver": "^6.0.1",
     "body-parser": "^1.20.2",
+    "connect-livereload": "^0.6.1",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
