--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "multer": "^1.4.5-lts.1",
     "pdf-lib": "^1.17.1",
     "pdf-parse": "^1.1.1",
+    "pdf.js-extract": "^0.2.1",
+    "pdfjs": "^2.5.2",
     "puppeteer": "^21.3.6"
   }
 }
